--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -6,10 +6,27 @@
     <style>
         h1 {
             font-size: 65px;
+            font-family: sans-serif;
             color: orange
         }
         .cor-de-fundo-textos {
-            background-color: bisque;
+            background-color: rgb(15, 133, 230);
+        }
+        p {
+            font-weight: 600;
+            font-size: 3em;
+        }
+        body {
+            font-size: 16px;
+        }
+        #amarelo{
+            background-color: yellow;
+        }
+        #vermelho {
+            background-color: red;
+        }
+        #marrom {
+            background-color: brown;
         }
     </style>
   </head>
@@ -17,9 +34,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="cor-de-fundo-textos">Qual é a sua cor favorita?</p>
     <ul class="cor-de-fundo-textos">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
