--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        h1 {
+        /* h1 {
             font-size: 65px;
             font-family: sans-serif;
             color: orange
@@ -27,7 +28,7 @@
         }
         #marrom {
             background-color: brown;
-        }
+        } */
     </style>
   </head>
   <body>
